--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/next": "^4.9.2",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.3.2",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
@@ -19,6 +22,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "9.30.1",
+    "eslint-config-next": "15.3.4",
     "typescript": "^5"
   }
 }
