--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,15 @@
     ],
     "frameworksBackend": {
       "region": "asia-east1"
-    }
+    },
+    "rewrites": [
+      { "source": "/upload", "destination": "/upload.html" },
+      { "source": "/assets", "destination": "/assets.html" },
+      { "source": "/dashboard", "destination": "/dashboard.html" },
+      { "source": "/version-history", "destination": "/version-history.html" },
+      { "source": "/login", "destination": "/login.html" },
+      { "source": "/", "destination": "/index.html" }
+    ]
   },
   "functions": [
     {
