--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "test:e2e": "playwright test e2e"
   },
   "dependencies": {
     "@vercel/next": "^4.9.2",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.53.2",
     "@swc/core": "^1.12.9",
     "@swc/jest": "^0.2.38",
     "@testing-library/jest-dom": "^6.6.3",
@@ -26,13 +29,18 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.0.1",
     "eslint": "9.30.1",
     "eslint-config-next": "15.3.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
+    "node-fetch": "^2.7.0",
+    "playwright": "^1.53.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
